branding/css/spacewalk-theme.less
/* Main HTML5 tags defined for the theme */
html, body {
	height: 100%
}
footer {
	padding: 1.2em 0;
	background: #030303;
	color: #cfcfcf;
	font-weight: normal;
	font-size: 0.9em;
	height: 80px;
	clear: both;

	.make-row(0);

	div:nth-child(1) {
		.make-xs-column(8);
		.text-center;
		.make-sm-column-offset(2);
	}
	div:nth-child(2) {
		.make-xs-column(2);
		.text-right;
		.hidden-xs;
	}
}

section {
	/* for the body div to make both columns the same size*/
	height: auto;
	min-height: 100%;
}
/* titles */
h1, h2, h3, h4 {
	.Roboto-thin
}
h1 {
	font-size: 2em
}
h2 {
	font-size: 1.7em;
}
h3 {
	font-size: 1.4em;
}
h4 {
	font-size: 1.2em;
}
p {
	margin-bottom: 1em;
}

/* basic layout */
.row-0 {
	.make-row();
	&:first-child {
		padding-left:0;
	}
	&:last-child {
		padding-right: 0
	}
}
.spacewalk-header-container {
	.make-row(0);
	.spacewalk-logo {
		.make-xs-column(5);
		padding-left: 0;
	}
	.spacewalk-header-links {
		.make-xs-column(7);
		.text-right;
		padding-right: 0;
	}
}

.spacewalk-main-column-layout {
	.make-row(0);
	min-height: 100%;
	aside {
		.make-md-column(2);
	}
	section {
		.make-md-column(10);
	}
}


.spacewalk-main-column-layout {
	/* override the grid row margin */
	margin-right: 0;
	margin-left: 0;
 	aside {
		background: @spacewalk-aside;
		border-right: 1px solid @spacewalk-aside-border;
		height: auto;
		min-height: 100%;
		/* erasing the predefined paddings in the columns */
		padding-right: 0;
		padding-left: 0;
	}

	/* fixing margins in the 1st and last columns */
	section {
		padding-left:2em;
		padding-right: 2em;
		padding-bottom: 3em;
		/* some animation */
		transition: width 2s, height 2s, transform 2s;
    	-webkit-transition: width 2s, height 2s, -webkit-transform 2s;
    }
}

/* fixing the footer to the bottom */
.spacewalk-top-wrap {
	overflow: hidden;
	margin-bottom: -80px;
	padding-bottom: 80px;
	height: auto !important;
	min-height: 100%
}
/* style for the login page */
.login-page {
	width: 70%;
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	overflow: hidden;
	ul {
		list-style: none;
	}
}

.navbar-primary .btn-group {
  margin: 8px 7px 0 0;
}
.navbar-primary .btn-group .badge {
  margin-right: 3px;
}
.navbar-utility .search {
  clear: left;
  float: right;
  margin: 7px 7px 0 0;
}

//PAGINATOR from 0 - 9 and A - Z

.spacewalk-alphabar{
	padding-bottom: .3em;
	&.pagination{
		margin: 0
	}
	&.pagination > li > a, .pagination > li > span{
		border-top: 1px solid #dddddd;
		border-bottom: 1px solid #dddddd;
		border-left: 0;
		border-right: 0;
		font-size: .9em;
	}
	&.pagination-sm > li:first-child > a, .pagination-sm > li:first-child > span{
		border-left: 1px solid #dddddd;
		padding-left: 8px;
	}
	&.pagination-sm > li:last-child > a, .pagination-sm > li:last-child > span{
		border-right: 1px solid #dddddd;
		padding-right: 8px;
	}
	&.pagination-sm > li > a, .pagination-sm > li > span{
		padding: 4px;
	}
	&.pagination-sm > li:nth-child(11) > a{
		border-left: 1px solid #dddddd;
		padding-left: 10px;
	}
	&.pagination-sm > li:nth-child(10) > a{
		padding-right: 10px;
	}
}

// Filter by system: button besides the input search
.spacewalk-button-filter{
	border-left: 0;
	color: #666666;
	background-color: #ffffff;
	border-color: #cccccc;
}

//Table's filters
.filter-input{
	padding: .7em;
	.col-md-3{
		padding-left: 0
	}
	.col-md-9{
		padding-right: 0
	}
}
.display-number{
	.input-sm;
	display: inline-block;
	border: 1px solid #dddddd;
}
.view-systems-registered{
	.input-sm;
	width: 10em;
	display: inline-block;
	border: 1px solid #dddddd;
}

/* Icons Legend */
aside .sideleg {
	background: @spacewalk-icon-legend;
	width: 90%;
	color: @spacewalk-icon-legend-text;
	padding: .5em 1em;
	border-radius: 4px;
	margin: 2em auto;
	.hidden-sm;
	.hidden-xs;
	li {
		list-style: none;
		margin: 1em 0;
		padding:0;
	}
	ul {
		margin: 0;
		padding: 0
	}
}
// Main horizontal menu
.spacewalk-main-nav {
	border: 0
}
.spacewalk-main-nav:after {
	height: 4px;
	background: @spacewalk-main	;
	width: 100%
}

/* style for Menu in the left column */
.nav-stacked > li + li {
	margin-top: 0;
}

//Menu in left column
aside ul > ul li {
	list-style: none;
	padding: 0
}
aside .nav > li > a {
	padding: .4em 1em
}
/* ... */

